--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,13 +21,13 @@
 
     <div class="wrapper">
 
-      <section style="padding: 0px">
+      <section style="padding: 9990px;">
         <div id="title">
           <h1>{{ site.title | default: site.github.repository_name }}</h1>
           <p>{{ site.description | default: site.github.project_tagline }}</p>
           <hr>
-          <span class="credits right"><a href="https://jannasikeko.github.io">tomo</a></span>
-          <span class="credits left">tan jan Nasikeko</span>
+          <span class="credits left"><a href="https://jannasikeko.github.io">tomo</a></span>
+          <span class="credits right">tan jan Nasikeko</span>
         </div>
 
         {{ content }}
